plugins {
	id 'java'
	id 'io.freefair.lombok' version '8.3'
	id 'com.adarshr.test-logger' version '3.2.0'
	id 'org.springframework.boot' version '3.1.4'
	id 'io.spring.dependency-management' version '1.1.3'
}

group = 'com.example'
version = '0.0.3'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.projectlombok:lombok:1.18.28'
	compileOnly 'org.projectlombok:lombok:1.18.28'
	implementation 'org.postgresql:postgresql:42.6.0'
	implementation 'com.zaxxer:HikariCP:5.0.1'
	annotationProcessor 'org.projectlombok:lombok:1.18.28'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
	implementation 'org.flywaydb:flyway-core:9.22.1'
	testImplementation 'org.junit.jupiter:junit-jupiter:5.9.3'
	testImplementation 'com.h2database:h2:2.2.224'
	implementation 'org.springframework.security:spring-security-crypto:6.1.5'
}

test {
	outputs.upToDateWhen { false }
	useJUnitPlatform()
	testLogging.showStandardStreams = true
}

jar {
	enabled = true
}